--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link rel="stylesheet" href="css/swiper.min.css">
-		<link rel="stylesheet" type="text/css" href="css/common/shared.css" />
-		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1396827_90atgg95hc.css" />
-		<link href="css/common/moveMenu.css" type="text/css" rel="stylesheet" />
-		<link rel="stylesheet" type="text/css" href="css/animate.min.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<title></title>
-	</head>
-	<body style="left: 0;" class="page">
-		<!-- 头部 -->
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport"
+		content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+	<link rel="stylesheet" href="css/swiper.min.css">
+	<link rel="stylesheet" type="text/css" href="css/common/shared.css" />
+	<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_1396827_90atgg95hc.css" />
+	<link href="css/common/moveMenu.css" type="text/css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	<title>海能达防疫复工</title>
+</head>
+
+<body style="left: 0;" class="page">
+	<!-- S 电脑菜单 -->
 	<div class="zl-pc-header-box">
 		<div class="zl-pc-header">
 			<div class="cistern">
@@ -25,6 +28,8 @@
 					<div class="zl-pc-nav">
 						<div class="zl-pc-nav-column">
 							<ul class="zl-pc-nav-column-ul">
+
+								<!-- 产品 -->
 								<li class="zl-pc-nav-column-li">
 									<a target="_self" class="zl-pc-nav-column-a">产品中心</a>
 									<div class="zl-pc-nav-con">
@@ -166,6 +171,7 @@
 									</div>
 								</li>
 
+								<!-- 案例 -->
 								<li class="zl-pc-nav-column-li">
 									<a target="_self" class="zl-pc-nav-column-a">行业案列</a>
 									<div class="zl-pc-nav-con" style="top: 133px;">
@@ -210,10 +216,8 @@
 										</div>
 									</div>
 								</li>
-								<!-- 解决方案 -->
 
 								<!-- 服务与支持 -->
-
 								<li class="zl-pc-nav-column-li">
 									<a class="zl-pc-nav-column-a">
 										服务与支持
@@ -309,9 +313,10 @@
 										</div>
 									</div>
 								</li>
-								<!-- 关于海能达 -->
 
-								<li class="zl-pc-nav-column-li"><a class="zl-pc-nav-column-a">
+								<!-- 合作伙伴 -->
+								<li class="zl-pc-nav-column-li">
+									<a class="zl-pc-nav-column-a">
 										合作伙伴
 									</a>
 									<div class="zl-pc-nav-con">
@@ -320,23 +325,30 @@
 												<div class="text">
 													<h3>渠道合作伙伴</h3>
 													<ul class="clearfix zl-pc-nav-textul">
-														<li><a href="/cn#/index/partner">成为合作伙伴</a></li>
-														<li><a href="/cn#/index/portal">合作伙伴门户</a></li>
+														<li><a
+																href="https://www.hytera.com/cn#/index/partner">成为合作伙伴</a>
+														</li>
+														<li><a href="https://www.hytera.com/cn#/index/portal">合作伙伴门户</a>
+														</li>
 													</ul>
 												</div>
 												<div class="text">
 													<h3>解决方案合作伙伴</h3>
 													<ul class="clearfix zl-pc-nav-textul">
-														<li><a href="/cn#/index/solutionPartner">成为合作伙伴</a></li>
+														<li><a
+																href="https://www.hytera.com/cn#/index/solutionPartner">成为合作伙伴</a>
+														</li>
 													</ul>
 												</div>
 											</div>
 										</div>
 									</div>
 								</li>
+
 							</ul>
 						</div>
 					</div>
+
 
 					<div class="zl-pc-hamburger-nav">
 
@@ -344,7 +356,8 @@
 								style="color: #5E5E5E !important;"></i></a>
 					</div>
 
-					<div class="zl-pc-lang">
+					<!-- 搜索 -->
+					<!-- <div class="zl-pc-lang">
 						<div class="zl-pc-lang-t">
 							<a
 								href="https://www.hytera.com/cn/#/index/search/product/%E6%89%A7%E6%B3%95%E8%AE%B0%E5%BD%95%E4%BB%AA"><i
@@ -352,7 +365,7 @@
 							<div class="m-box"></div>
 						</div>
 
-					</div>
+					</div> -->
 
 					<!--<div class="zl-pc-search">
 		                <div class="zl-pc-search-icon">
@@ -375,17 +388,17 @@
 			</div>
 		</div>
 	</div>
-	<!--End 头部 -->
+	<!--E 电脑菜单 -->
 	<!-- content -->
 	<div class="layouts">
 		<!-- banner -->
 		<div class="banner">
 			<img src="img/pc-banner.jpg" alt="" srcset="">
-			<a class="btn" href="#">了解更多</a>
+			<a class="btn" href="#story">了解更多</a>
 		</div>
 		<!-- banner -->
 		<!-- 疫线动态 -->
-		<div class="dynamic" >
+		<div class="dynamic" id="events">
 			<div class="dynamic_img"><img src="img/heart.png" alt=""></div>
 			<div class="dynamic_content">
 				<div class="dynamic_content_item">
@@ -402,26 +415,33 @@
 			<span class="right"></span>
 		</div>
 		<!-- 疫线动态 -->
+
 		<!-- 抗疫报道 -->
-		<div class="prevention pc">
+		<div class="prevention pc" id="news">
 			<div class="title">抗疫报道</div>
 			<div class="report">
-				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375"><img src="img/prevention1.png" alt=""></a></div>
+				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375"><img
+							src="img/prevention1.jpg" alt=""></a></div>
 				<div class="report_content">
 					<div>
 						<h3 class="report_h3">支援疫情防控救治硬核战，海能达向全国多地捐赠通信设备</h3>
-						<p class="report_p">新型冠状病毒肺炎疫情持续发酵，在疫情面前，万千医护人员不顾安危、负重前行。 无数建设者们放弃了与家人团聚的时光，纷纷赶建“火神山医院”。 社会各界与企业的捐赠支援纷纷涌向湖北，开启了一场疫情防控救治的硬核战！</p>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多 ></a>
+						<p class="report_p">新型冠状病毒肺炎疫情持续发酵，在疫情面前，万千医护人员不顾安危、负重前行。 无数建设者们放弃了与家人团聚的时光，纷纷赶建“火神山医院”。
+							社会各界与企业的捐赠支援纷纷涌向湖北，开启了一场疫情防控救治的硬核战！</p>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 			</div>
 			<div class="report">
-				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img src="img/prevention2.png" alt=""></a></div>
+				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img
+							src="img/prevention2.jpg" alt=""></a></div>
 				<div class="report_content">
 					<div>
 						<h3 class="report_h3">疫情之下，我不自逸——一群通信人的“抗疫”行动</h3>
-						<p class="report_p">疫情猛于虎，“抗疫”重于山！ 重大疫情面前，全国各个地区、各条战线、各个领域紧急动员起来，全党全民上下同心，坚定信心，共同投入到抗击疫情的斗争中。 世界卫生组织总干事谭德赛称：中方行动速度之快、规模之大，世所罕见</p>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多 ></a>
+						<p class="report_p">疫情猛于虎，“抗疫”重于山！ 重大疫情面前，全国各个地区、各条战线、各个领域紧急动员起来，全党全民上下同心，坚定信心，共同投入到抗击疫情的斗争中。
+							世界卫生组织总干事谭德赛称：中方行动速度之快、规模之大，世所罕见</p>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 			</div>
@@ -430,19 +450,21 @@
 			<span class="left"></span>
 			<span class="right"></span>
 		</div>
-		<div class="prevention modile">
+		<div class="prevention modile" id="news">
 			<div class="title">抗疫报道</div>
 			<div class="swiper-container preventionSwiper" id="">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="video_img"><img class="v_img" src="img/prevention1.png" alt=""></div>
-						<a class="video_title" href="">深视新闻专题报道——复工复产“加速度” 筑牢经济“压舱石”</a>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多 ></a>
-					</div> 
+						<div class="video_img"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375"><img class="v_img" src="img/prevention1.jpg" alt=""></a></div>
+						<a class="video_title" href="">支援疫情防控救治硬核战，海能达向全国多地捐赠通信设备</a>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多
+							></a>
+					</div>
 					<div class="swiper-slide">
-						<div class="video_img"><img class="v_img" src="img/prevention2.png" alt=""></div>
-						<a class="video_title" href="">深圳战疫系列综述 复工复产“加速度”筑牢经济“压舱石”--壹深圳</a>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多 ></a>
+						<div class="video_img"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img class="v_img" src="img/prevention2.jpg" alt=""></a></div>
+						<a class="video_title" href="">疫情之下，我不自逸——一群通信人的“抗疫”行动</a>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 				<!-- 如果需要导航按钮 -->
@@ -455,27 +477,34 @@
 			<span class="right"></span>
 		</div>
 		<!-- 抗疫报道 -->
-		<!-- video -->
-		<div class="prevention video">
+
+		<!-- 战疫视频 -->
+		<div class="prevention video" id="video">
 			<div class="title">战疫视频</div>
 			<div class="swiper-container" id="swiperVideo">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide video-item" data-id="VIDEBNnGPHJ2eAiPcrQVkFzB200301s">
-						<div class="video_img"><img class="v_img" src="img/video1.png" alt=""><img class="appy" src="img/video_apply.png" alt=""></div>
-						<a class="video_title" href="">深视新闻专题报道——复工复产“加速度” 筑牢经济“压舱石”</a>
-					</div> 
-					<div class="swiper-slide video-item" data-id="c3071tuma5s">
-						<div class="video_img"><img class="v_img" src="img/video2.png" alt=""><img class="appy" src="img/video_apply.png" alt=""></div>
-						<a class="video_title" href="">深圳战疫系列综述 复工复产“加速度”筑牢经济“压舱石”--壹深圳</a>
+					<div class="swiper-slide cctv-item" cctv-id="VIDEBNnGPHJ2eAiPcrQVkFzB200301">
+						<div class="" style="width: 332px;margin: 0 auto;">
+							<div class="video_img"><img class="v_img" src="img/video1.jpg" alt=""><img class="appy"
+									src="img/video_apply.png" alt=""></div>
+							<a class="video_title" href="">央视新闻：多方施策复工复产 为企业降成本提信心</a>
+						</div>
 					</div>
-					<div class="swiper-slide video-item" data-id="28444065s">
-						<div class="video_img"><img class="v_img" src="img/video3.png" alt=""><img class="appy" src="img/video_apply.png" alt=""></div>
-						<a class="video_title" href="">八道防线保障复工复产 企业寻机拉动业务增长--壹深圳</a>
+					<div class="swiper-slide video-item" data-id="c3071tuma5s">
+						<div class="video_img"><img class="v_img" src="img/video2.jpg" alt=""><img class="appy"
+								src="img/video_apply.png" alt=""></div>
+						<a class="video_title" href="">深圳卫视：深圳战疫系列综述 复工复产“加速度”筑牢经济“压舱石”</a>
+					</div>
+					<div class="swiper-slide sztv-item" sztv-id="28444065s">
+						<div class="video_img"><img class="v_img" src="img/video3.jpg" alt=""><img class="appy"
+								src="img/video_apply.png" alt=""></div>
+						<a class="video_title" href="">深圳财经：八道防线保障复工复产 企业寻机拉动业务增长</a>
 
 					</div>
 					<div class="swiper-slide video-item" data-id="a30638k6s8w">
-						<div class="video_img"><img class="v_img" src="img/video4.png" alt=""><img class="appy" src="img/video_apply.png" alt=""></div>
-						<a class="video_title" >龙岗新闻：企业复工首日：龙岗区科学复工 精准“战疫”</a>
+						<div class="video_img"><img class="v_img" src="img/video4.jpg" alt=""><img class="appy"
+								src="img/video_apply.png" alt=""></div>
+						<a class="video_title">龙岗新闻：企业复工首日：龙岗区科学复工 精准“战疫”</a>
 
 					</div>
 				</div>
@@ -488,28 +517,49 @@
 			<span class="left"></span>
 			<span class="right"></span>
 		</div>
-		<!-- video -->
+		<!-- 战疫视频 -->
 
 		<!-- 疫情故事 -->
-		<div class="prevention pc mrb">
-			<div class="title">疫线故事 </div>
+		<div class="prevention pc mrb" id="story">
+			<div class="title">疫线故事</div>
 			<div class="report">
-				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474"><img src="img/prevention1.png" alt=""></a></div>
+				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75475"><img
+							src="img/story3.jpg" alt=""></a></div>
 				<div class="report_content">
 					<div>
-						<h3 class="report_h3">疫情来袭，我们是同一战壕的兄弟！ </h3>
-						<p class="report_p">2020年初，新冠肺炎风暴来袭，这个春节，“全民宅”成为防疫新话题。然而伴随假期结束，复工临近，海能达人中，一批最强“逆行者”早已奋战一线，摩拳擦掌，一些最美“坚守者”.........</p>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474" class="understand">了解更多 ></a>
+						<h3 class="report_h3">疫线故事（二）那些不一样的行政人！</h3>
+						<p class="report_p">
+							超长假期、远程办公已无力吐槽，全年的目标任务在向自己招手，在家办公，焦虑；现场办公，担心！有一群人，他们7*24小时在线；有一群人，他们没有春节。他们让担心化为贴心、放心，他们用担当筑起一道道安全防线。他们是海能达最可爱的行政人，刚刚过去的特别二月，他们的故事暖心上演！
+						</p>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75475" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 			</div>
 			<div class="report">
-				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img src="img/prevention2.png" alt=""></a></div>
+				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474"><img
+							src="img/story1.jpg" alt=""></a></div>
+				<div class="report_content">
+					<div>
+						<h3 class="report_h3">疫线故事（一）疫情来袭，我们是同一战壕的兄弟！</h3>
+						<p class="report_p">
+							2020年初，新冠肺炎风暴来袭，这个春节，“全民宅”成为防疫新话题。然而伴随假期结束，复工临近，海能达人中，一批最强“逆行者”早已奋战一线，摩拳擦掌，一些最美“坚守者”也已陆续返岗，跃跃欲试。疫情严峻，但他们热情不减；使命在肩，他们便义无反顾。这群平凡人用实际行动讲述了一段不平凡事！他们的故事值得聆听，你们的拼搏故事也将被陆续发现！
+						</p>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474" class="understand">了解更多
+							></a>
+					</div>
+				</div>
+			</div>
+			<div class="report">
+				<div class="report_imgBox"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img
+							src="img/story2.jpg" alt=""></a></div>
 				<div class="report_content">
 					<div>
 						<h3 class="report_h3">疫情之下，我不自逸——一群通信人的“抗疫”行动</h3>
-						<p class="report_p">疫情猛于虎，“抗疫”重于山！ 重大疫情面前，全国各个地区、各条战线、各个领域紧急动员起来，全党全民上下同心，坚定信心，共同投入到抗击疫情的斗争中。 世界卫生组织总干事谭德赛称：中方行动速度之快、规模之大，世所罕见</p>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多 ></a>
+						<p class="report_p">疫情猛于虎，“抗疫”重于山！ 重大疫情面前，全国各个地区、各条战线、各个领域紧急动员起来，全党全民上下同心，坚定信心，共同投入到抗击疫情的斗争中。
+							世界卫生组织总干事谭德赛称：中方行动速度之快、规模之大，世所罕见。</p>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 			</div>
@@ -519,19 +569,27 @@
 			<span class="right"></span>
 		</div>
 
-		<div class="prevention modile mrb">
+		<div class="prevention modile mrb" id="story">
 			<div class="title">疫线故事 </div>
-			<div class="swiper-container preventionSwiper" >
+			<div class="swiper-container preventionSwiper">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="video_img"><img class="v_img" src="img/prevention1.png" alt=""></div>
-						<a class="video_title" href="">深视新闻专题报道——复工复产“加速度” 筑牢经济“压舱石”</a>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多 ></a>
-					</div> 
+						<div class="video_img"><a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75475"><img class="v_img" src="img/story3.jpg" alt=""></a></div>
+						<a class="video_title" href="">疫线故事（二）那些不一样的行政人！</a>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75475" class="understand">了解更多
+							></a>
+					</div>
 					<div class="swiper-slide">
-						<div class="video_img"><img class="v_img" src="img/prevention2.png" alt=""></div>
-						<a class="video_title" href="">深圳战疫系列综述 复工复产“加速度”筑牢经济“压舱石”--壹深圳</a>
-						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75375" class="understand">了解更多 ></a>
+						<div class="video_img"><a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474"><img class="v_img" src="img/story1.jpg" alt=""></a></div>
+						<a class="video_title" href="">疫线故事（一）疫情来袭，我们是同一战壕的兄弟!</a>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/1813/75474" class="understand">了解更多
+							></a>
+					</div>
+					<div class="swiper-slide">
+						<div class="video_img"><a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373"><img class="v_img" src="img/story2.jpg" alt=""></a></div>
+						<a class="video_title" href="">疫情之下，我不自逸——一群通信人的“抗疫”行动</a>
+						<a href="https://www.hytera.com/cn/#/index/category/detail/5/126/75373" class="understand">了解更多
+							></a>
 					</div>
 				</div>
 				<!-- 如果需要导航按钮 -->
@@ -1187,12 +1245,13 @@
 		</div>
 	</footer>
 	<!-- End 底部 -->
+
 	<script src="js/jquery-1.8.3.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/hytera_menu.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/index-new.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/swiper.min.js"></script>
 	<script>
-		$(function(){
+		$(function () {
 			function responsePCStyle() {
 				var ww = window.innerWidth;
 				console.log(window.innerWidth)
@@ -1208,18 +1267,18 @@
 						zoom: 1
 					})
 				}
-				if(ww < 1024){
-					$('.banner img').attr("src","img/mb-banner.png")
-				}else{
-					$('.banner img').attr("src","img/pc-banner.jpg")
+				if (ww < 1024) {
+					$('.banner img').attr("src", "img/mb-banner.jpg")
+				} else {
+					$('.banner img').attr("src", "img/pc-banner.jpg")
 				}
 			}
-			
+
 			window.onresize = responsePCStyle
 			responsePCStyle()
 			$(".zl-pc-nav-column-ul .zl-pc-nav-column-li ").hover(function () {
 				$(this).find(".zl-pc-nav-con").show()
-			},function () { 
+			}, function () {
 				$(".zl-pc-nav-con").hide()
 			})
 			$('.video-item').click(function () {
@@ -1228,24 +1287,46 @@
 				$('.video-box').show()
 				$('#iframe').attr('src', url);
 			})
+			$('.sztv-item').click(function () {
+				var id = $(this).attr('sztv-id')
+				console.log(id)
+				var url = 'http://video.cutv.com/cutv/vod/2020/02/20/f690baebd9c7415eb4ad43358f0f23aa/f690baebd9c7415eb4ad43358f0f23aa_h264_500k_mp4.mp4'
+				$('.video-box').show()
+				$('#iframe').attr('src', url);
+			})
+			$('.cctv-item').click(function () {
+				window.location.href ="http://tv.cctv.com/2020/03/01/VIDEBNnGPHJ2eAiPcrQVkFzB200301.shtml"
+			})
+			$('.video-box2').click(function () {
+				$(this).hide()
+			})
 
 			$('.video-box').click(function () {
 				var id = $(this).data('id')
 				$('#iframe').attr('src', '');
 				$(this).hide()
 			})
-
+			$(".report_imgBox img").hover(function () {
+				$(this).css({ "transform": "scale(1.1)", "transition": "all .2s ease" })
+			}, function () {
+				$(this).css({ "transform": "scale(1)", "transition": "inherit" })
+			})
+			$(".v_img").hover(function () {
+				$(this).css({ "transform": "scale(1.1)", "transition": "all .2s ease" })
+			}, function () {
+				$(this).css({ "transform": "scale(1)", "transition": "inherit" })
+			})
 			let swiperVideo = new Swiper('#swiperVideo', {
 				loop: true, // 循环模式选项
-				// autoplay: {
-				// 	delay: 2000,
-				// },
+				autoplay: {
+					delay: 2000,
+				},
 				navigation: {
 					nextEl: '#swiperVideo .swiper-button-next',
 					prevEl: '#swiperVideo .swiper-button-prev',
 				},
 				slidesPerView: 3,
-				spaceBetween:5,
+				spaceBetween: 60,
 				breakpoints: {
 					768: { //当屏幕宽度小于等于768
 						slidesPerView: 1,
@@ -1282,8 +1363,9 @@
 					}
 				}
 			});
-			
+
 		})
 	</script>
-	</body>
+</body>
+
 </html>
